// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`6.1: KafkaSource → Filter → KafkaSink > produces correct DDL + DML 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : filter-pipeline
-- ====================================================================

SET 'pipeline.name' = 'filter-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : orders
-- type        : kafka
-- topic       : orders
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : large_orders
-- type        : kafka
-- topic       : large-orders
-- format      : json
-- ====================================================================

CREATE TABLE \`large_orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3)
) WITH (
  'connector' = 'kafka',
  'topic' = 'large-orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- step        : Filter_1
-- type        : Filter
-- input       : orders
-- output      : large_orders
-- rule        : \`amount\` > 100
-- ====================================================================

INSERT INTO \`large_orders\`
SELECT * FROM \`orders\` WHERE \`amount\` > 100;
"
`;

exports[`6.2: Two-table inner join > produces correct JOIN SQL 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : join-pipeline
-- ====================================================================

SET 'pipeline.name' = 'join-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : orders
-- type        : kafka
-- topic       : orders
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : users
-- type        : kafka
-- topic       : users
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`users\` (
  \`user_id\` STRING,
  \`name\` STRING,
  \`email\` STRING
) WITH (
  'connector' = 'kafka',
  'topic' = 'users',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : enriched_orders
-- type        : kafka
-- topic       : enriched-orders
-- format      : json
-- ====================================================================

CREATE TABLE \`enriched_orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3)
) WITH (
  'connector' = 'kafka',
  'topic' = 'enriched-orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : orders
-- output      : enriched_orders
-- ====================================================================

INSERT INTO \`enriched_orders\`
SELECT * FROM \`orders\` INNER JOIN \`users\` ON \`KafkaSource_0\`.\`user_id\` = \`KafkaSource_1\`.\`user_id\`;
"
`;

exports[`6.3: Windowed aggregation with TUMBLE > produces correct TVF + GROUP BY 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : windowed-pipeline
-- ====================================================================

SET 'pipeline.name' = 'windowed-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : orders
-- type        : kafka
-- topic       : orders
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : hourly_totals
-- type        : kafka
-- topic       : hourly-totals
-- format      : json
-- ====================================================================

CREATE TABLE \`hourly_totals\` (
  \`user_id\` STRING,
  \`total_amount\` BIGINT,
  \`order_count\` BIGINT,
  \`window_start\` TIMESTAMP(3),
  \`window_end\` TIMESTAMP(3)
) WITH (
  'connector' = 'kafka',
  'topic' = 'hourly-totals',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : unknown
-- output      : hourly_totals
-- ====================================================================

INSERT INTO \`hourly_totals\`
SELECT \`user_id\`, SUM(\`amount\`) AS \`total_amount\`, COUNT(*) AS \`order_count\`, window_start, window_end FROM TABLE(
  TUMBLE(TABLE \`orders\`, DESCRIPTOR(\`event_time\`), INTERVAL '1' HOUR)
) GROUP BY \`user_id\`, window_start, window_end;
"
`;

exports[`6.4: Deduplicate produces ROW_NUMBER pattern > produces correct ROW_NUMBER with WHERE rownum = 1 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : dedup-pipeline
-- ====================================================================

SET 'pipeline.name' = 'dedup-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : events
-- type        : kafka
-- topic       : events
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`events\` (
  \`event_id\` BIGINT,
  \`user_id\` STRING,
  \`event_type\` STRING,
  \`event_time\` TIMESTAMP(3),
  \`payload\` STRING,
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'events',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : deduped_events
-- type        : kafka
-- topic       : deduped-events
-- format      : json
-- ====================================================================

CREATE TABLE \`deduped_events\` (
  \`event_id\` BIGINT,
  \`user_id\` STRING,
  \`event_type\` STRING,
  \`event_time\` TIMESTAMP(3),
  \`payload\` STRING,
  \`rownum\` BIGINT
) WITH (
  'connector' = 'kafka',
  'topic' = 'deduped-events',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- step        : Deduplicate_1
-- type        : Deduplicate
-- input       : events
-- output      : deduped_events
-- ====================================================================

INSERT INTO \`deduped_events\`
SELECT *, ROW_NUMBER() OVER (PARTITION BY \`event_id\` ORDER BY \`event_time\` ASC) AS rownum
FROM \`events\`
QUALIFY rownum = 1;
"
`;

exports[`6.5: TopN produces ROW_NUMBER pattern > produces correct ROW_NUMBER with WHERE rownum <= N 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : topn-pipeline
-- ====================================================================

SET 'pipeline.name' = 'topn-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : orders
-- type        : kafka
-- topic       : orders
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : top_orders
-- type        : kafka
-- topic       : top-orders
-- format      : json
-- ====================================================================

CREATE TABLE \`top_orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  \`rownum\` BIGINT
) WITH (
  'connector' = 'kafka',
  'topic' = 'top-orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- step        : TopN_1
-- type        : TopN
-- input       : orders
-- output      : top_orders
-- top-n       : 5
-- ====================================================================

INSERT INTO \`top_orders\`
SELECT *, ROW_NUMBER() OVER (PARTITION BY \`user_id\` ORDER BY \`amount\` DESC) AS rownum
FROM \`orders\`
QUALIFY rownum <= 5;
"
`;

exports[`6.6: Multi-sink produces STATEMENT SET > wraps multiple INSERT INTO in STATEMENT SET 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : multi-sink-pipeline
-- ====================================================================

SET 'pipeline.name' = 'multi-sink-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : events
-- type        : kafka
-- topic       : events
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`events\` (
  \`event_id\` BIGINT,
  \`user_id\` STRING,
  \`event_type\` STRING,
  \`event_time\` TIMESTAMP(3),
  \`payload\` STRING,
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'events',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : errors_2
-- type        : kafka
-- topic       : errors
-- format      : json
-- ====================================================================

CREATE TABLE \`errors_2\` (
  \`event_id\` BIGINT,
  \`user_id\` STRING,
  \`event_type\` STRING,
  \`event_time\` TIMESTAMP(3),
  \`payload\` STRING
) WITH (
  'connector' = 'kafka',
  'topic' = 'errors',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : all_events_2
-- type        : kafka
-- topic       : all-events
-- format      : json
-- ====================================================================

CREATE TABLE \`all_events_2\` (
  \`event_id\` BIGINT,
  \`user_id\` STRING,
  \`event_type\` STRING,
  \`event_time\` TIMESTAMP(3),
  \`payload\` STRING
) WITH (
  'connector' = 'kafka',
  'topic' = 'all-events',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- step        : Filter_3
-- type        : Filter
-- input       : events
-- output      : errors_2
-- rule        : \`event_type\` = 'ERROR'
-- ====================================================================

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : events
-- output      : all_events_2
-- ====================================================================

EXECUTE STATEMENT SET BEGIN
INSERT INTO \`errors_2\`
SELECT * FROM \`events\` WHERE \`event_type\` = 'ERROR';
INSERT INTO \`all_events_2\`
SELECT * FROM \`events\`;
END;
"
`;

exports[`6.7: Catalog pipeline produces CREATE CATALOG > generates CREATE CATALOG and catalog-qualified references 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : catalog-pipeline
-- ====================================================================

SET 'pipeline.name' = 'catalog-pipeline';

-- ====================================================================
-- CATALOG
-- --------------------------------------------------------------------
-- id          : PaimonCatalog_0
-- type        : paimon
-- warehouse   : s3://bucket/paimon
-- ====================================================================

CREATE CATALOG \`lake\` WITH (
  'type' = 'paimon',
  'warehouse' = 's3://bucket/paimon'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : page_view_alerts
-- type        : kafka
-- topic       : page-view-alerts
-- format      : json
-- ====================================================================

CREATE TABLE \`page_view_alerts\` WITH (
  'connector' = 'kafka',
  'topic' = 'page-view-alerts',
  'format' = 'json'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : lake
-- output      : page_view_alerts
-- ====================================================================

INSERT INTO \`page_view_alerts\`
SELECT * FROM \`lake\`.\`analytics\`.\`page_views\`;
"
`;

exports[`6.8: CDC source with debezium-json > produces Kafka source DDL with debezium-json format 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : cdc-pipeline
-- ====================================================================

SET 'pipeline.name' = 'cdc-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : dbserver1_inventory_orders
-- type        : kafka
-- topic       : dbserver1.inventory.orders
-- format      : debezium-json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`dbserver1_inventory_orders\` (
  \`order_id\` BIGINT,
  \`product\` STRING,
  \`quantity\` INT,
  \`price\` DECIMAL(10, 2),
  PRIMARY KEY (\`order_id\`) NOT ENFORCED
) WITH (
  'connector' = 'kafka',
  'topic' = 'dbserver1.inventory.orders',
  'format' = 'debezium-json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : orders_snapshot
-- type        : jdbc
-- table       : orders_snapshot
-- url         : jdbc:postgresql://localhost:5433/warehouse
-- ====================================================================

CREATE TABLE \`orders_snapshot\` (
  \`order_id\` BIGINT,
  \`product\` STRING,
  \`quantity\` INT,
  \`price\` DECIMAL(10, 2),
  PRIMARY KEY (\`order_id\`) NOT ENFORCED
) WITH (
  'connector' = 'jdbc',
  'url' = 'jdbc:postgresql://localhost:5433/warehouse',
  'table-name' = 'orders_snapshot'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : dbserver1_inventory_orders
-- output      : orders_snapshot
-- ====================================================================

INSERT INTO \`orders_snapshot\`
SELECT * FROM \`dbserver1_inventory_orders\`;
"
`;

exports[`6.9: LookupJoin with async config > produces lookup join with proc_time and FOR SYSTEM_TIME AS OF 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : lookup-pipeline
-- ====================================================================

SET 'pipeline.name' = 'lookup-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : orders
-- type        : kafka
-- topic       : orders
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : enriched_orders
-- type        : kafka
-- topic       : enriched-orders
-- format      : json
-- ====================================================================

CREATE TABLE \`enriched_orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3)
) WITH (
  'connector' = 'kafka',
  'topic' = 'enriched-orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : orders
-- output      : enriched_orders
-- ====================================================================

INSERT INTO \`enriched_orders\`
SELECT * FROM \`orders\` LEFT JOIN \`dim_users\` FOR SYSTEM_TIME AS OF \`orders\`.proc_time ON \`KafkaSource_0\`.\`user_id\` = \`dim_users\`.\`user_id\`;
"
`;

exports[`6.10: IntervalJoin with time bounds > produces BETWEEN ... AND ... time predicates 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : interval-join-pipeline
-- ====================================================================

SET 'pipeline.name' = 'interval-join-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : orders
-- type        : kafka
-- topic       : orders
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : shipments
-- type        : kafka
-- topic       : shipments
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`shipments\` (
  \`order_id\` BIGINT,
  \`shipped_time\` TIMESTAMP(3),
  \`carrier\` STRING,
  WATERMARK FOR \`shipped_time\` AS \`shipped_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'shipments',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : order_shipments
-- type        : kafka
-- topic       : order-shipments
-- format      : json
-- ====================================================================

CREATE TABLE \`order_shipments\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3)
) WITH (
  'connector' = 'kafka',
  'topic' = 'order-shipments',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : orders
-- output      : order_shipments
-- ====================================================================

INSERT INTO \`order_shipments\`
SELECT * FROM \`orders\` JOIN \`shipments\` ON \`KafkaSource_0\`.\`order_id\` = \`KafkaSource_1\`.\`order_id\` AND \`shipments\`.\`shipped_time\` BETWEEN \`orders\`.event_time AND \`orders\`.event_time + INTERVAL '7' DAY;
"
`;

exports[`6.11: Anti join produces WHERE NOT EXISTS > generates correlated subquery with NOT EXISTS 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : anti-join-pipeline
-- ====================================================================

SET 'pipeline.name' = 'anti-join-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : orders
-- type        : kafka
-- topic       : orders
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : cancellations
-- type        : kafka
-- topic       : cancellations
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`cancellations\` (
  \`order_id\` BIGINT,
  \`cancelled_at\` TIMESTAMP(3)
) WITH (
  'connector' = 'kafka',
  'topic' = 'cancellations',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : active_orders
-- type        : kafka
-- topic       : active-orders
-- format      : json
-- ====================================================================

CREATE TABLE \`active_orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3)
) WITH (
  'connector' = 'kafka',
  'topic' = 'active-orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : orders
-- output      : active_orders
-- ====================================================================

INSERT INTO \`active_orders\`
SELECT \`orders\`.* FROM \`orders\` WHERE NOT EXISTS (
  SELECT 1 FROM \`cancellations\` WHERE \`KafkaSource_0\`.\`order_id\` = \`KafkaSource_1\`.\`order_id\`
);
"
`;

exports[`6.12: Broadcast hint in join SQL > generates /*+ BROADCAST(alias) */ hint 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : broadcast-pipeline
-- ====================================================================

SET 'pipeline.name' = 'broadcast-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : orders
-- type        : kafka
-- topic       : orders
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : products
-- type        : kafka
-- topic       : products
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`products\` (
  \`product_id\` STRING,
  \`product_name\` STRING,
  \`category\` STRING
) WITH (
  'connector' = 'kafka',
  'topic' = 'products',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : enriched_orders
-- type        : kafka
-- topic       : enriched-orders
-- format      : json
-- ====================================================================

CREATE TABLE \`enriched_orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3)
) WITH (
  'connector' = 'kafka',
  'topic' = 'enriched-orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : orders
-- output      : enriched_orders
-- ====================================================================

INSERT INTO \`enriched_orders\`
SELECT /*+ BROADCAST(\`products\`) */ * FROM \`orders\` INNER JOIN \`products\` ON \`KafkaSource_0\`.\`product_id\` = \`KafkaSource_1\`.\`product_id\`;
"
`;

exports[`9.1: RawSQL inlines SQL in pipeline > inlines raw SQL as a subquery 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : raw-sql-pipeline
-- ====================================================================

SET 'pipeline.name' = 'raw-sql-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : orders
-- type        : kafka
-- topic       : orders
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : users
-- type        : kafka
-- topic       : users
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`users\` (
  \`user_id\` STRING,
  \`name\` STRING,
  \`email\` STRING
) WITH (
  'connector' = 'kafka',
  'topic' = 'users',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : enriched_orders
-- type        : kafka
-- topic       : enriched-orders
-- format      : json
-- ====================================================================

CREATE TABLE \`enriched_orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3)
) WITH (
  'connector' = 'kafka',
  'topic' = 'enriched-orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : KafkaSource_0
-- output      : enriched_orders
-- ====================================================================

INSERT INTO \`enriched_orders\`
SELECT o.*, u.name AS user_name FROM \`KafkaSource_0\` o JOIN \`KafkaSource_1\` u ON o.\`user_id\` = u.\`user_id\`;
"
`;

exports[`9.2: UDF generates CREATE FUNCTION DDL > produces CREATE FUNCTION statement 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : udf-pipeline
-- ====================================================================

SET 'pipeline.name' = 'udf-pipeline';

-- ====================================================================
-- FUNCTION
-- --------------------------------------------------------------------
-- name        : my_hash
-- class       : com.mycompany.HashFunction
-- language    : java
-- ====================================================================

CREATE FUNCTION \`my_hash\` AS 'com.mycompany.HashFunction';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : events
-- type        : kafka
-- topic       : events
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`events\` (
  \`event_id\` BIGINT,
  \`user_id\` STRING,
  \`event_type\` STRING,
  \`event_time\` TIMESTAMP(3),
  \`payload\` STRING,
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'events',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : hashed_events
-- type        : kafka
-- topic       : hashed-events
-- format      : json
-- ====================================================================

CREATE TABLE \`hashed_events\` (
  \`event_id\` BIGINT,
  \`hashed\` STRING
) WITH (
  'connector' = 'kafka',
  'topic' = 'hashed-events',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- step        : Map_2
-- type        : Map
-- input       : events
-- output      : hashed_events
-- ====================================================================

INSERT INTO \`hashed_events\`
SELECT \`event_id\` AS \`event_id\`, my_hash(\`payload\`) AS \`hashed\` FROM \`events\`;
"
`;

exports[`9.3: MatchRecognize generates MATCH_RECOGNIZE clause > produces MATCH_RECOGNIZE with PARTITION BY, ORDER BY, MEASURES, PATTERN, DEFINE 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : cep-pipeline
-- ====================================================================

SET 'pipeline.name' = 'cep-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : transactions
-- type        : kafka
-- topic       : transactions
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`transactions\` (
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_type\` STRING,
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'transactions',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : fraud_alerts
-- type        : kafka
-- topic       : fraud-alerts
-- format      : json
-- ====================================================================

CREATE TABLE \`fraud_alerts\` (
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_type\` STRING,
  \`event_time\` TIMESTAMP(3)
) WITH (
  'connector' = 'kafka',
  'topic' = 'fraud-alerts',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : transactions
-- output      : fraud_alerts
-- ====================================================================

INSERT INTO \`fraud_alerts\`
SELECT *
FROM \`transactions\`
MATCH_RECOGNIZE (
  PARTITION BY \`user_id\`
  ORDER BY \`event_time\`
  MEASURES
    A.\`event_time\` AS \`start_time\`,
    C.\`event_time\` AS \`end_time\`,
    SUM(B.\`amount\`) AS \`total_amount\`
  AFTER MATCH SKIP PAST LAST ROW
  PATTERN (A B+ C)
  DEFINE
    A AS A.\`event_type\` = 'login',
    B AS B.\`amount\` > 1000,
    C AS C.\`event_type\` = 'withdrawal'
);
"
`;

exports[`LateralJoin produces LATERAL TABLE > generates cross join lateral table SQL 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : lateral-join-pipeline
-- ====================================================================

SET 'pipeline.name' = 'lateral-join-pipeline';

-- ====================================================================
-- FUNCTION
-- --------------------------------------------------------------------
-- name        : parse_address
-- class       : com.mycompany.fns.AddressParser
-- language    : java
-- ====================================================================

CREATE FUNCTION \`parse_address\` AS 'com.mycompany.fns.AddressParser';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : orders
-- type        : kafka
-- topic       : orders
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`orders\` (
  \`order_id\` BIGINT,
  \`shipping_address\` STRING,
  \`amount\` DECIMAL(10, 2)
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : enriched_orders
-- type        : kafka
-- topic       : enriched-orders
-- format      : json
-- ====================================================================

CREATE TABLE \`enriched_orders\` (
  \`order_id\` BIGINT,
  \`shipping_address\` STRING,
  \`amount\` DECIMAL(10, 2)
) WITH (
  'connector' = 'kafka',
  'topic' = 'enriched-orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : orders
-- output      : enriched_orders
-- ====================================================================

INSERT INTO \`enriched_orders\`
SELECT \`orders\`.*, T.\`street\`, T.\`city\`, T.\`zip\` FROM \`orders\` JOIN LATERAL TABLE(parse_address(shipping_address)) AS T(\`street\`, \`city\`, \`zip\`);
"
`;

exports[`LateralJoin produces LATERAL TABLE > generates left join lateral table SQL 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : left-lateral-pipeline
-- ====================================================================

SET 'pipeline.name' = 'left-lateral-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : documents
-- type        : kafka
-- topic       : documents
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`documents\` (
  \`doc_id\` BIGINT,
  \`content\` STRING
) WITH (
  'connector' = 'kafka',
  'topic' = 'documents',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : entities
-- type        : kafka
-- topic       : entities
-- format      : json
-- ====================================================================

CREATE TABLE \`entities\` (
  \`doc_id\` BIGINT,
  \`content\` STRING
) WITH (
  'connector' = 'kafka',
  'topic' = 'entities',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : documents
-- output      : entities
-- ====================================================================

INSERT INTO \`entities\`
SELECT \`documents\`.*, T.\`entity\`, T.\`entity_type\` FROM \`documents\` LEFT JOIN LATERAL TABLE(extract_entities(content)) AS T(\`entity\`, \`entity_type\`);
"
`;

exports[`QUALIFY: Deduplicate version-aware codegen > uses QUALIFY on Flink 2.0 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : dedup-pipeline
-- ====================================================================

SET 'pipeline.name' = 'dedup-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : events
-- type        : kafka
-- topic       : events
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`events\` (
  \`event_id\` BIGINT,
  \`user_id\` STRING,
  \`event_type\` STRING,
  \`event_time\` TIMESTAMP(3),
  \`payload\` STRING,
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'events',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : deduped_events
-- type        : kafka
-- topic       : deduped-events
-- format      : json
-- ====================================================================

CREATE TABLE \`deduped_events\` (
  \`event_id\` BIGINT,
  \`user_id\` STRING,
  \`event_type\` STRING,
  \`event_time\` TIMESTAMP(3),
  \`payload\` STRING,
  \`rownum\` BIGINT
) WITH (
  'connector' = 'kafka',
  'topic' = 'deduped-events',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- step        : Deduplicate_1
-- type        : Deduplicate
-- input       : events
-- output      : deduped_events
-- ====================================================================

INSERT INTO \`deduped_events\`
SELECT *, ROW_NUMBER() OVER (PARTITION BY \`event_id\` ORDER BY \`event_time\` ASC) AS rownum
FROM \`events\`
QUALIFY rownum = 1;
"
`;

exports[`QUALIFY: Deduplicate version-aware codegen > uses subquery wrapper on Flink 1.20 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : dedup-pipeline
-- ====================================================================

SET 'pipeline.name' = 'dedup-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : events
-- type        : kafka
-- topic       : events
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`events\` (
  \`event_id\` BIGINT,
  \`user_id\` STRING,
  \`event_type\` STRING,
  \`event_time\` TIMESTAMP(3),
  \`payload\` STRING,
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'events',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : deduped_events
-- type        : kafka
-- topic       : deduped-events
-- format      : json
-- ====================================================================

CREATE TABLE \`deduped_events\` (
  \`event_id\` BIGINT,
  \`user_id\` STRING,
  \`event_type\` STRING,
  \`event_time\` TIMESTAMP(3),
  \`payload\` STRING,
  \`rownum\` BIGINT
) WITH (
  'connector' = 'kafka',
  'topic' = 'deduped-events',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- step        : Deduplicate_1
-- type        : Deduplicate
-- input       : events
-- output      : deduped_events
-- ====================================================================

INSERT INTO \`deduped_events\`
SELECT * FROM (
  SELECT *, ROW_NUMBER() OVER (PARTITION BY \`event_id\` ORDER BY \`event_time\` ASC) AS rownum
  FROM \`events\`
) WHERE rownum = 1;
"
`;

exports[`QUALIFY: Qualify escape-hatch component > generates QUALIFY with condition only 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : qualify-pipeline
-- ====================================================================

SET 'pipeline.name' = 'qualify-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : events
-- type        : kafka
-- topic       : events
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`events\` (
  \`event_id\` BIGINT,
  \`user_id\` STRING,
  \`event_type\` STRING,
  \`event_time\` TIMESTAMP(3),
  \`payload\` STRING,
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'events',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : output
-- type        : kafka
-- topic       : output
-- format      : json
-- ====================================================================

CREATE TABLE \`output\` (
  \`event_id\` BIGINT,
  \`user_id\` STRING,
  \`event_type\` STRING,
  \`event_time\` TIMESTAMP(3),
  \`payload\` STRING
) WITH (
  'connector' = 'kafka',
  'topic' = 'output',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : events
-- output      : output
-- ====================================================================

INSERT INTO \`output\`
SELECT *
FROM \`events\`
QUALIFY rn = 1;
"
`;

exports[`QUALIFY: Qualify escape-hatch component > generates QUALIFY with inline window expression 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : qualify-pipeline
-- ====================================================================

SET 'pipeline.name' = 'qualify-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : events
-- type        : kafka
-- topic       : events
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`events\` (
  \`event_id\` BIGINT,
  \`user_id\` STRING,
  \`event_type\` STRING,
  \`event_time\` TIMESTAMP(3),
  \`payload\` STRING,
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'events',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : output
-- type        : kafka
-- topic       : output
-- format      : json
-- ====================================================================

CREATE TABLE \`output\` (
  \`event_id\` BIGINT,
  \`user_id\` STRING,
  \`event_type\` STRING,
  \`event_time\` TIMESTAMP(3),
  \`payload\` STRING
) WITH (
  'connector' = 'kafka',
  'topic' = 'output',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : events
-- output      : output
-- ====================================================================

INSERT INTO \`output\`
SELECT *, ROW_NUMBER() OVER (PARTITION BY \`event_type\` ORDER BY \`event_time\` DESC) AS rn
FROM \`events\`
QUALIFY rn <= 3;
"
`;

exports[`QUALIFY: TopN version-aware codegen > uses QUALIFY on Flink 2.0 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : topn-pipeline
-- ====================================================================

SET 'pipeline.name' = 'topn-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : orders
-- type        : kafka
-- topic       : orders
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : top_orders
-- type        : kafka
-- topic       : top-orders
-- format      : json
-- ====================================================================

CREATE TABLE \`top_orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  \`rownum\` BIGINT
) WITH (
  'connector' = 'kafka',
  'topic' = 'top-orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- step        : TopN_1
-- type        : TopN
-- input       : orders
-- output      : top_orders
-- top-n       : 5
-- ====================================================================

INSERT INTO \`top_orders\`
SELECT *, ROW_NUMBER() OVER (PARTITION BY \`user_id\` ORDER BY \`amount\` DESC) AS rownum
FROM \`orders\`
QUALIFY rownum <= 5;
"
`;

exports[`QUALIFY: TopN version-aware codegen > uses subquery wrapper on Flink 1.20 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : topn-pipeline
-- ====================================================================

SET 'pipeline.name' = 'topn-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : orders
-- type        : kafka
-- topic       : orders
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : top_orders
-- type        : kafka
-- topic       : top-orders
-- format      : json
-- ====================================================================

CREATE TABLE \`top_orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  \`rownum\` BIGINT
) WITH (
  'connector' = 'kafka',
  'topic' = 'top-orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- step        : TopN_1
-- type        : TopN
-- input       : orders
-- output      : top_orders
-- top-n       : 5
-- ====================================================================

INSERT INTO \`top_orders\`
SELECT * FROM (
  SELECT *, ROW_NUMBER() OVER (PARTITION BY \`user_id\` ORDER BY \`amount\` DESC) AS rownum
  FROM \`orders\`
) WHERE rownum <= 5;
"
`;

exports[`Route produces correct multi-branch SQL > generates Route DML with programmatic reverse-nesting pattern 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : log-router
-- ====================================================================

SET 'pipeline.name' = 'log-router';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : logs
-- type        : kafka
-- topic       : logs
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`logs\` (
  \`message\` STRING,
  \`level\` STRING,
  \`timestamp\` TIMESTAMP(3)
) WITH (
  'connector' = 'kafka',
  'topic' = 'logs',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : errors
-- type        : kafka
-- topic       : errors
-- format      : json
-- ====================================================================

CREATE TABLE \`errors\` WITH (
  'connector' = 'kafka',
  'topic' = 'errors',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : warnings
-- type        : kafka
-- topic       : warnings
-- format      : json
-- ====================================================================

CREATE TABLE \`warnings\` WITH (
  'connector' = 'kafka',
  'topic' = 'warnings',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : other
-- type        : kafka
-- topic       : other
-- format      : json
-- ====================================================================

CREATE TABLE \`other\` WITH (
  'connector' = 'kafka',
  'topic' = 'other',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : logs
-- output      : errors
-- ====================================================================

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : logs
-- output      : warnings
-- ====================================================================

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : logs
-- output      : other
-- ====================================================================

EXECUTE STATEMENT SET BEGIN
INSERT INTO \`errors\`
SELECT * FROM \`logs\`
WHERE \`level\` = 'ERROR';
INSERT INTO \`warnings\`
SELECT * FROM \`logs\`
WHERE \`level\` = 'WARN';
INSERT INTO \`other\`
SELECT * FROM \`logs\`;
END;
"
`;

exports[`Route produces correct multi-branch SQL > generates STATEMENT SET with branch conditions and transforms (JSX forward-reading) 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : inventory-analytics
-- ====================================================================

SET 'pipeline.name' = 'inventory-analytics';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : cdc_inventory_products
-- type        : kafka
-- topic       : cdc.inventory.products
-- format      : debezium-json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- group-id    : inventory-analytics
-- ====================================================================

CREATE TABLE \`cdc_inventory_products\` (
  \`id\` INT,
  \`name\` STRING,
  \`category\` STRING,
  \`price\` DOUBLE,
  \`quantity\` INT
) WITH (
  'connector' = 'kafka',
  'topic' = 'cdc.inventory.products',
  'format' = 'debezium-json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset',
  'properties.group.id' = 'inventory-analytics'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : low_stock_alerts
-- type        : kafka
-- topic       : low-stock-alerts
-- format      : json
-- bootstrap   : kafka:9092
-- ====================================================================

CREATE TABLE \`low_stock_alerts\` (
  \`id\` INT,
  \`name\` STRING,
  \`category\` STRING,
  \`price\` DOUBLE,
  \`quantity\` INT
) WITH (
  'connector' = 'kafka',
  'topic' = 'low-stock-alerts',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : category_stats
-- type        : kafka
-- topic       : category-stats
-- format      : json
-- bootstrap   : kafka:9092
-- ====================================================================

CREATE TABLE \`category_stats\` (
  \`category\` STRING,
  \`total_items\` BIGINT,
  \`avg_price\` DOUBLE,
  \`product_count\` BIGINT,
  PRIMARY KEY (\`category\`) NOT ENFORCED
) WITH (
  'connector' = 'upsert-kafka',
  'topic' = 'category-stats',
  'key.format' = 'json',
  'value.format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : cdc_inventory_products
-- output      : low_stock_alerts
-- ====================================================================

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- step        : Aggregate_4
-- type        : Aggregate
-- input       : cdc_inventory_products
-- output      : category_stats
-- group-by    : category
-- ====================================================================

EXECUTE STATEMENT SET BEGIN
INSERT INTO \`low_stock_alerts\`
SELECT * FROM \`cdc_inventory_products\`
WHERE \`quantity\` >= 0 AND \`quantity\` < 10;
INSERT INTO \`category_stats\`
SELECT \`category\`, SUM(\`quantity\`) AS \`total_items\`, AVG(\`price\`) AS \`avg_price\`, COUNT(*) AS \`product_count\` FROM \`cdc_inventory_products\` GROUP BY \`category\`;
END;
"
`;

exports[`SideOutput produces STATEMENT SET with main + side INSERTs > generates WHERE NOT for main path and WHERE for side path with metadata 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : side-output-pipeline
-- ====================================================================

SET 'pipeline.name' = 'side-output-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : orders
-- type        : kafka
-- topic       : orders
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : processed_orders
-- type        : kafka
-- topic       : processed-orders
-- format      : json
-- ====================================================================

CREATE TABLE \`processed_orders\` WITH (
  'connector' = 'kafka',
  'topic' = 'processed-orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : order_errors
-- type        : kafka
-- topic       : order-errors
-- format      : json
-- ====================================================================

CREATE TABLE \`order_errors\` WITH (
  'connector' = 'kafka',
  'topic' = 'order-errors',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : orders
-- output      : processed_orders
-- ====================================================================

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : orders
-- output      : order_errors
-- ====================================================================

EXECUTE STATEMENT SET BEGIN
INSERT INTO \`processed_orders\`
SELECT * FROM \`orders\` WHERE NOT (amount < 0 OR user_id IS NULL);
INSERT INTO \`order_errors\`
SELECT *, CURRENT_TIMESTAMP AS \`_side_ts\`, 'invalid-order' AS \`_side_tag\` FROM \`orders\` WHERE (amount < 0 OR user_id IS NULL);
END;
"
`;

exports[`SideOutput produces STATEMENT SET with main + side INSERTs > generates side output without tag 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : no-tag-pipeline
-- ====================================================================

SET 'pipeline.name' = 'no-tag-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : events
-- type        : kafka
-- topic       : events
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`events\` (
  \`event_id\` BIGINT,
  \`user_id\` STRING,
  \`event_type\` STRING,
  \`event_time\` TIMESTAMP(3),
  \`payload\` STRING,
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'events',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : good_events
-- type        : kafka
-- topic       : good-events
-- format      : json
-- ====================================================================

CREATE TABLE \`good_events\` WITH (
  'connector' = 'kafka',
  'topic' = 'good-events',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : bad_events
-- type        : kafka
-- topic       : bad-events
-- format      : json
-- ====================================================================

CREATE TABLE \`bad_events\` WITH (
  'connector' = 'kafka',
  'topic' = 'bad-events',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : events
-- output      : good_events
-- ====================================================================

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : events
-- output      : bad_events
-- ====================================================================

EXECUTE STATEMENT SET BEGIN
INSERT INTO \`good_events\`
SELECT * FROM \`events\` WHERE NOT (payload IS NULL);
INSERT INTO \`bad_events\`
SELECT *, CURRENT_TIMESTAMP AS \`_side_ts\` FROM \`events\` WHERE (payload IS NULL);
END;
"
`;

exports[`Validate produces STATEMENT SET with valid + reject INSERTs > generates full validation SQL with notNull, range, and expression rules 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : validate-pipeline
-- ====================================================================

SET 'pipeline.name' = 'validate-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : raw_orders
-- type        : kafka
-- topic       : raw-orders
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`raw_orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`email\` STRING
) WITH (
  'connector' = 'kafka',
  'topic' = 'raw-orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : valid_orders
-- type        : kafka
-- topic       : valid-orders
-- format      : json
-- ====================================================================

CREATE TABLE \`valid_orders\` WITH (
  'connector' = 'kafka',
  'topic' = 'valid-orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : invalid_orders
-- type        : kafka
-- topic       : invalid-orders
-- format      : json
-- ====================================================================

CREATE TABLE \`invalid_orders\` WITH (
  'connector' = 'kafka',
  'topic' = 'invalid-orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : raw_orders
-- output      : valid_orders
-- ====================================================================

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : raw_orders
-- output      : invalid_orders
-- ====================================================================

EXECUTE STATEMENT SET BEGIN
INSERT INTO \`valid_orders\`
SELECT * FROM \`raw_orders\`
WHERE \`order_id\` IS NOT NULL
    AND \`user_id\` IS NOT NULL
    AND \`amount\` IS NOT NULL
    AND \`amount\` >= 0 AND \`amount\` <= 1000000
    AND email LIKE '%@%.%';
INSERT INTO \`invalid_orders\`
SELECT *,
    CASE
      WHEN \`order_id\` IS NULL THEN 'notNull:order_id'
      WHEN \`user_id\` IS NULL THEN 'notNull:user_id'
      WHEN \`amount\` IS NULL THEN 'notNull:amount'
      WHEN \`amount\` < 0 OR \`amount\` > 1000000 THEN 'range:amount[0,1000000]'
      WHEN NOT (email LIKE '%@%.%') THEN 'expression:valid_email'
    END AS \`_validation_error\`,
    CURRENT_TIMESTAMP AS \`_validated_at\`
FROM \`raw_orders\`
WHERE NOT (
    \`order_id\` IS NOT NULL
    AND \`user_id\` IS NOT NULL
    AND \`amount\` IS NOT NULL
    AND \`amount\` >= 0 AND \`amount\` <= 1000000
    AND email LIKE '%@%.%'
);
END;
"
`;

exports[`Validate produces STATEMENT SET with valid + reject INSERTs > generates notNull-only validation 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : notnull-pipeline
-- ====================================================================

SET 'pipeline.name' = 'notnull-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : events
-- type        : kafka
-- topic       : events
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`events\` (
  \`event_id\` BIGINT,
  \`user_id\` STRING,
  \`event_type\` STRING,
  \`event_time\` TIMESTAMP(3),
  \`payload\` STRING,
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'events',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : validated
-- type        : kafka
-- topic       : validated
-- format      : json
-- ====================================================================

CREATE TABLE \`validated\` WITH (
  'connector' = 'kafka',
  'topic' = 'validated',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : rejected
-- type        : kafka
-- topic       : rejected
-- format      : json
-- ====================================================================

CREATE TABLE \`rejected\` WITH (
  'connector' = 'kafka',
  'topic' = 'rejected',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : events
-- output      : validated
-- ====================================================================

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : events
-- output      : rejected
-- ====================================================================

EXECUTE STATEMENT SET BEGIN
INSERT INTO \`validated\`
SELECT * FROM \`events\`
WHERE \`event_id\` IS NOT NULL
    AND \`user_id\` IS NOT NULL;
INSERT INTO \`rejected\`
SELECT *,
    CASE
      WHEN \`event_id\` IS NULL THEN 'notNull:event_id'
      WHEN \`user_id\` IS NULL THEN 'notNull:user_id'
    END AS \`_validation_error\`,
    CURRENT_TIMESTAMP AS \`_validated_at\`
FROM \`events\`
WHERE NOT (
    \`event_id\` IS NOT NULL
    AND \`user_id\` IS NOT NULL
);
END;
"
`;

exports[`View produces CREATE VIEW > generates CREATE VIEW from upstream Map + Source 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : view-pipeline
-- ====================================================================

SET 'pipeline.name' = 'view-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : orders
-- type        : kafka
-- topic       : orders
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : high_value
-- type        : kafka
-- topic       : high-value
-- format      : json
-- ====================================================================

CREATE TABLE \`high_value\` WITH (
  'connector' = 'kafka',
  'topic' = 'high-value',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : all_orders
-- type        : kafka
-- topic       : all-orders
-- format      : json
-- ====================================================================

CREATE TABLE \`all_orders\` WITH (
  'connector' = 'kafka',
  'topic' = 'all-orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- VIEW
-- --------------------------------------------------------------------
-- name        : enriched_orders
-- ====================================================================

CREATE VIEW \`enriched_orders\` AS
SELECT \`order_id\` AS \`order_id\`, amount * quantity AS \`total\` FROM \`orders\`;

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- step        : Filter_4
-- type        : Filter
-- input       : enriched_orders
-- output      : high_value
-- rule        : total > 1000
-- ====================================================================

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : enriched_orders
-- output      : all_orders
-- ====================================================================

EXECUTE STATEMENT SET BEGIN
INSERT INTO \`high_value\`
SELECT * FROM (
SELECT * FROM \`enriched_orders\`
) WHERE total > 1000;
INSERT INTO \`all_orders\`
SELECT * FROM \`enriched_orders\`;
END;
"
`;
